--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/greencoder001/life-machine/issues"
   },
-  "homepage": "https://github.com/greencoder001/life-machine#readme"
+  "homepage": "https://github.com/greencoder001/life-machine#readme",
+  "dependencies": {
+    "fs-extra": "^11.1.1"
+  }
 }
