--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "life-machine": "bin/main.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
   "keywords": [
     "life-machine",
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/greencoder001/life-machine#readme",
   "dependencies": {
+    "@jsdevtools/npm-publish": "^2.1.0",
+    "axios": "^1.4.0",
     "fs-extra": "^11.1.1"
   }
 }
